--- a/anan0gueira-Git/scratch.ipynb
+++ b/anan0gueira-Git/scratch.ipynb
@@ -5,7 +5,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Let us use a Nifti file that is shipped with nilearn\n",
+    "from nilearn.datasets import MNI152_FILE_PATH\n",
+    "\n",
+    "# Note that the variable MNI152_FILE_PATH is just a path to a Nifti file\n",
+    "print('Path to MNI152 template: %r' % MNI152_FILE_PATH)"
+   ]
   }
  ],
  "metadata": {
@@ -24,7 +30,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
