--- a/anan0gueira-Git/ProjetoTeste.ipynb
+++ b/anan0gueira-Git/ProjetoTeste.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,9 @@
     "from nilearn import plotting\n",
     "from nilearn import datasets\n",
     "from nilearn.image import mean_img\n",
-    "from nilearn import image"
+    "from nilearn import image\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -59,10 +61,10 @@
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays.OrthoSlicer at 0x12cb7ebb0>"
+       "<nilearn.plotting.displays.OrthoSlicer at 0x11dd12f40>"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 29,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -94,10 +96,10 @@
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays.OrthoSlicer at 0x12c699ca0>"
+       "<nilearn.plotting.displays.OrthoSlicer at 0x11e3e75b0>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays.OrthoSlicer at 0x12d1f1bb0>"
+       "<nilearn.plotting.displays.OrthoSlicer at 0x11e8a2fd0>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -169,25 +171,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Imagem (7) passada para standard "
+    "#Imagem passada para standard "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays.OrthoSlicer at 0x12ce06ca0>"
+       "<nilearn.plotting.displays.OrthoSlicer at 0x11ef0dbb0>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,11 +219,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Conclusão final: Retirou-se o cranio e alinhou-se todas as posições (13)e (15) num standart"
+    "#Conclusão final: Retirou-se o cranio e alinhou-se todas as posições num standart"
    ]
   },
   {
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays.OrthoSlicer at 0x12d07a910>"
+       "<nilearn.plotting.displays.OrthoSlicer at 0x11eaf6d00>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -282,16 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Como (54) não está alinhado queremos alinhar também para um standart"
+    "#Como não está alinhado queremos alinhar também para um standart"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -304,10 +306,10 @@
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays.OrthoSlicer at 0x12d8dc790>"
+       "<nilearn.plotting.displays.OrthoSlicer at 0x11f62fc10>"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -334,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -357,10 +359,10 @@
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays.OrthoSlicer at 0x12d6d0f40>"
+       "<nilearn.plotting.displays.OrthoSlicer at 0x11f84b910>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -385,13 +387,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Smooth\n",
     "#Temos 222 volumes "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definir os momentos em que a pessoa estava a fazer alguma coisa e os momentos em que a pessoa estava a descansar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/ananogueira/Desktop/MVPA-speech_project/convert-bids-admin/DOCKER/events.tsv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-eceddff79b4e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mevents_PATH\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/Users/ananogueira/Desktop/MVPA-speech_project/convert-bids-admin/DOCKER/events.tsv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mevents_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mevents_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mna_values\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"n/a\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mevents_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    684\u001b[0m     )\n\u001b[1;32m    685\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 686\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    687\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    688\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    450\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    451\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 452\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp_or_buf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    453\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    454\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    944\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    945\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 946\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    947\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    948\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, engine)\u001b[0m\n\u001b[1;32m   1176\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"c\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1177\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"c\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1178\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1179\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1180\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"python\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, src, **kwds)\u001b[0m\n\u001b[1;32m   2006\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"usecols\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0musecols\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2007\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2008\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2009\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munnamed_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munnamed_cols\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2010\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/ananogueira/Desktop/MVPA-speech_project/convert-bids-admin/DOCKER/events.tsv'"
+     ]
+    }
+   ],
+   "source": [
+    "tr = 2.5  # tempo de repetição \n",
+    "n_scans = 222  # numero de volumes (?)\n",
+    "frame_times = np.arange(n_scans) * tr  # (?)\n",
+    "\n",
+    "# load events.tsv\n",
+    "events_PATH='/Users/ananogueira/Desktop/MVPA-speech_project/convert-bids-admin/DOCKER/events.tsv'\n",
+    "\n",
+    "events_df = pd.read_csv(events_PATH, sep='\\t', na_values=\"n/a\")\n",
+    "print(events_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
