script to apply FEAT

--- a/MVPA-project-admin/createlabels.ipynb
+++ b/MVPA-project-admin/createlabels.ipynb
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "events_df['onset']/tr"
+    "events_df['onset']/tr\n"
    ]
   },
   {
@@ -153,254 +153,6 @@
     "events_df['onset'][0]\n",
     "len(conditions)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Task ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ',\n",
-       " 'Baseline ']"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conditions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
