porjecg  + fp7 final

--- a/convert-bids-admin/DOCKER/prt2eventstsv.ipynb
+++ b/convert-bids-admin/DOCKER/prt2eventstsv.ipynb
@@ -12,24 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'E:\\\\DATA\\\\DATA_Carlos_Phonos\\\\JoaoPereira/001/run-fonologico-data/PROJECT/ANALYSIS/Fonologico.prt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-300f413aad87>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m# open file.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprt_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewline\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf_reader\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m     \u001b[0ml\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mf_reader\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'E:\\\\DATA\\\\DATA_Carlos_Phonos\\\\JoaoPereira/001/run-fonologico-data/PROJECT/ANALYSIS/Fonologico.prt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline  13\n",
+      "Task  12\n"
      ]
     }
    ],
    "source": [
     "# read .prt file\n",
     "root_data=\"E:\\\\DATA\\\\DATA_Carlos_Phonos\\\\\"\n",
+    "root_data=\"/Users/home/Documents/data/\"\n",
     "\n",
     "prt_file=root_data+'JoaoPereira/001/run-fonologico-data/PROJECT/ANALYSIS/Fonologico.prt'\n",
     "\n",
@@ -64,14 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +287,7 @@
        "24      Task   510.0      27.5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +511,7 @@
        "24  Baseline   540.0      12.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,14 +525,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created the events file in events.tsv \n"
+      "Created the events file in events_fonologico.tsv \n"
      ]
     }
    ],
@@ -552,37 +543,88 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "events"
+    "TR=2.5\n",
+    "onset_epoch=[]\n",
+    "duration_epoch=[]\n",
+    "trial_type_epoch=[]\n",
+    "\n",
+    "for i in range(len(events)):\n",
+    "    idx_=((events['duration'][i]/TR))+1\n",
+    "    onset_=(events['onset'][i]) \n",
+    "    for j in range(int(idx_)):   \n",
+    "        onset_epoch.append(onset_+(TR*j))\n",
+    "        duration_epoch.append(TR)\n",
+    "        trial_type_epoch.append(events['trial_type'][i])\n",
+    "\n",
+    "events_epoch = pd.DataFrame({'trial_type': trial_type_epoch,\n",
+    "               'onset': onset_epoch,\n",
+    "               'duration': duration_epoch})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'events' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-2c24b2cf614c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0midxs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mevents\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'onset'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mTR\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mev_epoched\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mevents\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0midx_2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mevents\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'duration'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mTR\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'events' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created the events file in events_epoch_fonologico.tsv \n"
      ]
     }
    ],
    "source": [
-    "idxs=events['onset']/TR\n",
-    "ev_epoched=[]\n",
+    "tsvfile = 'events_epoch_fonologico.tsv'\n",
+    "events_epoch.to_csv(tsvfile, sep='\\t', index=False)\n",
+    "print(\"Created the events file in %s \" % tsvfile)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TR=2.5\n",
+    "num_events=222\n",
+    "betaseries_df=[]\n",
+    "onset_betaseries=[]\n",
+    "duration_betaseries=[]\n",
+    "trial_type_betaseries=[]\n",
     "\n",
-    "for i in range(len(events)):\n",
-    "    idx_2=((events['duration'][i]/TR))+1\n",
-    "    for j in range(int(idx_2)):\n",
-    "        ev_epoched.append(events['trial_type'][i])"
+    "for i in range(num_events):\n",
+    "    onset_betaseries.append(TR*i)\n",
+    "    duration_betaseries.append(TR)\n",
+    "    trial_type_betaseries.append(i)\n",
+    "\n",
+    "betaseries_df = pd.DataFrame({'trial_type': trial_type_betaseries,\n",
+    "               'onset': onset_betaseries,\n",
+    "               'duration': duration_betaseries})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created the events file in betaseries_fonologico.tsv \n"
+     ]
+    }
+   ],
+   "source": [
+    "tsvfile = 'betaseries_fonologico.tsv'\n",
+    "betaseries_df.to_csv(tsvfile, sep='\\t', index=False)\n",
+    "print(\"Created the events file in %s \" % tsvfile)\n"
    ]
   },
   {
@@ -609,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
