--- a/MVPA-project-admin/Untitled.ipynb
+++ b/MVPA-project-admin/Untitled.ipynb
@@ -2,441 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/home/.local/lib/python3.8/site-packages/nilearn/datasets/__init__.py:87: FutureWarning: Fetchers from the nilearn.datasets module will be updated in version 0.9 to return python strings instead of bytes and Pandas dataframes instead of Numpy arrays.\n",
-      "  warn(\"Fetchers from the nilearn.datasets module will be \"\n"
-     ]
-    }
-   ],
-   "source": [
-    "# By default 2nd subject will be fetched\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from nilearn import datasets\n",
-    "haxby_dataset = datasets.fetch_haxby()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load target information as string and give a numerical identifier to each\n",
-    "behavioral = pd.read_csv(haxby_dataset.session_target[0], sep=' ')\n",
-    "conditions = behavioral['labels'].values"
+    "from scipy.io import loadmat\n",
+    "\n",
+    "log = loadmat('log_nomeacao_JoaoPereira_inner.mat')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['__header__', '__version__', '__globals__', 'ans', 'framesPath', 'subjectName', 'runName', 'syncBoxEnabled', 'configs', 'numRep', 'numOfCond', 'inblockRep', 'numBlocks', 'imageSequence', 'isi', 'imgDur', 'fixDur', 'blockDur', 'protocolConds', 'syncBoxHandle', 'foldersFrames_temp', 'counter', 'images', 'i', 'conditions', 'pathFrames_expressions', 'fileName_temp', 'imageData', 'screens', 'screenNumber', 'w', 'wRect', 'X', 'Y', 'FixCross', 'gotTrigger', 'logdata', 'startExperiment', 'numIt', 'startBlock', 'startTime', 'f', 'offset', 'imageIdx', 'imageToDisp', 'textureIndex', 'stopBlock', 'stopExperiment'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "TR=2.5"
+    "log.keys()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log['protocolConds']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 9, 37, 19, 1, 12]\n",
+      "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# Record these as an array of sessions\n",
-    "sessions = behavioral['chunks'].values\n",
-    "unique_sessions = behavioral['chunks'].unique()\n",
+    "offset=0\n",
     "\n",
-    "# fMRI data: a unique file for each session\n",
-    "func_filename = haxby_dataset.func[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "events = {}\n",
-    "# events will take  the form of a dictionary of Dataframes, one per session\n",
-    "for session in unique_sessions:\n",
-    "    # get the condition label per session\n",
-    "    conditions_session = conditions[sessions == session]\n",
-    "    # get the number of scans per session, then the corresponding\n",
-    "    # vector of frame times\n",
-    "    n_scans = len(conditions_session)\n",
-    "    frame_times = TR * np.arange(n_scans)\n",
-    "    # each event last the full TR\n",
-    "    duration = TR * np.ones(n_scans)\n",
-    "    # Define the events object\n",
-    "    events_ = pd.DataFrame(\n",
-    "        {'onset': frame_times, 'trial_type': conditions_session, 'duration': duration})\n",
-    "    # remove the rest condition and insert into the dictionary\n",
-    "    events[session] = events_[events_.trial_type != 'rest']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0:      onset trial_type  duration\n",
-       " 6     15.0   scissors       2.5\n",
-       " 7     17.5   scissors       2.5\n",
-       " 8     20.0   scissors       2.5\n",
-       " 9     22.5   scissors       2.5\n",
-       " 10    25.0   scissors       2.5\n",
-       " ..     ...        ...       ...\n",
-       " 110  275.0      chair       2.5\n",
-       " 111  277.5      chair       2.5\n",
-       " 112  280.0      chair       2.5\n",
-       " 113  282.5      chair       2.5\n",
-       " 114  285.0      chair       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 1:      onset trial_type  duration\n",
-       " 6     15.0       face       2.5\n",
-       " 7     17.5       face       2.5\n",
-       " 8     20.0       face       2.5\n",
-       " 9     22.5       face       2.5\n",
-       " 10    25.0       face       2.5\n",
-       " ..     ...        ...       ...\n",
-       " 110  275.0      house       2.5\n",
-       " 111  277.5      house       2.5\n",
-       " 112  280.0      house       2.5\n",
-       " 113  282.5      house       2.5\n",
-       " 114  285.0      house       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 2:      onset trial_type  duration\n",
-       " 6     15.0       face       2.5\n",
-       " 7     17.5       face       2.5\n",
-       " 8     20.0       face       2.5\n",
-       " 9     22.5       face       2.5\n",
-       " 10    25.0       face       2.5\n",
-       " ..     ...        ...       ...\n",
-       " 110  275.0   scissors       2.5\n",
-       " 111  277.5   scissors       2.5\n",
-       " 112  280.0   scissors       2.5\n",
-       " 113  282.5   scissors       2.5\n",
-       " 114  285.0   scissors       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 3:      onset trial_type  duration\n",
-       " 6     15.0       shoe       2.5\n",
-       " 7     17.5       shoe       2.5\n",
-       " 8     20.0       shoe       2.5\n",
-       " 9     22.5       shoe       2.5\n",
-       " 10    25.0       shoe       2.5\n",
-       " ..     ...        ...       ...\n",
-       " 110  275.0   scissors       2.5\n",
-       " 111  277.5   scissors       2.5\n",
-       " 112  280.0   scissors       2.5\n",
-       " 113  282.5   scissors       2.5\n",
-       " 114  285.0   scissors       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 4:      onset    trial_type  duration\n",
-       " 6     15.0          face       2.5\n",
-       " 7     17.5          face       2.5\n",
-       " 8     20.0          face       2.5\n",
-       " 9     22.5          face       2.5\n",
-       " 10    25.0          face       2.5\n",
-       " ..     ...           ...       ...\n",
-       " 110  275.0  scrambledpix       2.5\n",
-       " 111  277.5  scrambledpix       2.5\n",
-       " 112  280.0  scrambledpix       2.5\n",
-       " 113  282.5  scrambledpix       2.5\n",
-       " 114  285.0  scrambledpix       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 5:      onset trial_type  duration\n",
-       " 6     15.0        cat       2.5\n",
-       " 7     17.5        cat       2.5\n",
-       " 8     20.0        cat       2.5\n",
-       " 9     22.5        cat       2.5\n",
-       " 10    25.0        cat       2.5\n",
-       " ..     ...        ...       ...\n",
-       " 110  275.0      house       2.5\n",
-       " 111  277.5      house       2.5\n",
-       " 112  280.0      house       2.5\n",
-       " 113  282.5      house       2.5\n",
-       " 114  285.0      house       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 6:      onset    trial_type  duration\n",
-       " 6     15.0         house       2.5\n",
-       " 7     17.5         house       2.5\n",
-       " 8     20.0         house       2.5\n",
-       " 9     22.5         house       2.5\n",
-       " 10    25.0         house       2.5\n",
-       " ..     ...           ...       ...\n",
-       " 110  275.0  scrambledpix       2.5\n",
-       " 111  277.5  scrambledpix       2.5\n",
-       " 112  280.0  scrambledpix       2.5\n",
-       " 113  282.5  scrambledpix       2.5\n",
-       " 114  285.0  scrambledpix       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 7:      onset trial_type  duration\n",
-       " 6     15.0       face       2.5\n",
-       " 7     17.5       face       2.5\n",
-       " 8     20.0       face       2.5\n",
-       " 9     22.5       face       2.5\n",
-       " 10    25.0       face       2.5\n",
-       " ..     ...        ...       ...\n",
-       " 110  275.0     bottle       2.5\n",
-       " 111  277.5     bottle       2.5\n",
-       " 112  280.0     bottle       2.5\n",
-       " 113  282.5     bottle       2.5\n",
-       " 114  285.0     bottle       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 8:      onset trial_type  duration\n",
-       " 6     15.0       face       2.5\n",
-       " 7     17.5       face       2.5\n",
-       " 8     20.0       face       2.5\n",
-       " 9     22.5       face       2.5\n",
-       " 10    25.0       face       2.5\n",
-       " ..     ...        ...       ...\n",
-       " 110  275.0     bottle       2.5\n",
-       " 111  277.5     bottle       2.5\n",
-       " 112  280.0     bottle       2.5\n",
-       " 113  282.5     bottle       2.5\n",
-       " 114  285.0     bottle       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 9:      onset trial_type  duration\n",
-       " 6     15.0      house       2.5\n",
-       " 7     17.5      house       2.5\n",
-       " 8     20.0      house       2.5\n",
-       " 9     22.5      house       2.5\n",
-       " 10    25.0      house       2.5\n",
-       " ..     ...        ...       ...\n",
-       " 110  275.0   scissors       2.5\n",
-       " 111  277.5   scissors       2.5\n",
-       " 112  280.0   scissors       2.5\n",
-       " 113  282.5   scissors       2.5\n",
-       " 114  285.0   scissors       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 10:      onset trial_type  duration\n",
-       " 6     15.0        cat       2.5\n",
-       " 7     17.5        cat       2.5\n",
-       " 8     20.0        cat       2.5\n",
-       " 9     22.5        cat       2.5\n",
-       " 10    25.0        cat       2.5\n",
-       " ..     ...        ...       ...\n",
-       " 110  275.0   scissors       2.5\n",
-       " 111  277.5   scissors       2.5\n",
-       " 112  280.0   scissors       2.5\n",
-       " 113  282.5   scissors       2.5\n",
-       " 114  285.0   scissors       2.5\n",
-       " \n",
-       " [72 rows x 3 columns],\n",
-       " 11:      onset trial_type  duration\n",
-       " 6     15.0     bottle       2.5\n",
-       " 7     17.5     bottle       2.5\n",
-       " 8     20.0     bottle       2.5\n",
-       " 9     22.5     bottle       2.5\n",
-       " 10    25.0     bottle       2.5\n",
-       " ..     ...        ...       ...\n",
-       " 110  275.0   scissors       2.5\n",
-       " 111  277.5   scissors       2.5\n",
-       " 112  280.0   scissors       2.5\n",
-       " 113  282.5   scissors       2.5\n",
-       " 114  285.0   scissors       2.5\n",
-       " \n",
-       " [72 rows x 3 columns]}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "events"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['bottle', 'house', 'chair', 'scrambledpix', 'face', 'shoe', 'cat',\n",
-       "       'scissors'], dtype=object)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "events[session].trial_type.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unique_sessions\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>onset</th>\n",
-       "      <th>trial_type</th>\n",
-       "      <th>duration</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>face</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>17.5</td>\n",
-       "      <td>face</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>20.0</td>\n",
-       "      <td>face</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>22.5</td>\n",
-       "      <td>face</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>25.0</td>\n",
-       "      <td>face</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>275.0</td>\n",
-       "      <td>house</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>277.5</td>\n",
-       "      <td>house</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>280.0</td>\n",
-       "      <td>house</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>282.5</td>\n",
-       "      <td>house</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>285.0</td>\n",
-       "      <td>house</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>72 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     onset trial_type  duration\n",
-       "6     15.0       face       2.5\n",
-       "7     17.5       face       2.5\n",
-       "8     20.0       face       2.5\n",
-       "9     22.5       face       2.5\n",
-       "10    25.0       face       2.5\n",
-       "..     ...        ...       ...\n",
-       "110  275.0      house       2.5\n",
-       "111  277.5      house       2.5\n",
-       "112  280.0      house       2.5\n",
-       "113  282.5      house       2.5\n",
-       "114  285.0      house       2.5\n",
-       "\n",
-       "[72 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "events[1]"
+    "ev_type=[]\n",
+    "ev_tstamps=[]\n",
+    "\n",
+    "im_idx=0\n",
+    "\n",
+    "TR=3\n",
+    "\n",
+    "protocolConds=log['protocolConds'][0]\n",
+    "\n",
+    "imageSequence=log['imageSequence'][0]\n",
+    "\n",
+    "\n",
+    "# get events\n",
+    "for b in protocolConds:\n",
+    "    if b==1:\n",
+    "        for i in range(5):\n",
+    "            ev_type.append(0)\n",
+    "            ev_tstamps.append(offset)\n",
+    "            offset+=3\n",
+    "    else:\n",
+    "        for i in range(10):\n",
+    "            ev_type.append(imageSequence[im_idx])\n",
+    "            ev_tstamps.append(offset)\n",
+    "            offset+=3\n",
+    "            im_idx+=1\n",
+    "            \n",
+    "            \n",
+    "print(ev_type[:10])\n",
+    "print(ev_tstamps[:10])"
    ]
   },
   {
