--- a/MVPA-project-admin/geteventsfromlog.ipynb
+++ b/MVPA-project-admin/geteventsfromlog.ipynb
@@ -2,27 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.io import loadmat\n",
     "\n",
-    "log = loadmat('log_nomeacao_JoaoPereira_inner.mat')"
+    "log = loadmat('log_nomeacao_JoaoPereira_overt.mat')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['__header__', '__version__', '__globals__', 'ans', 'framesPath', 'subjectName', 'runName', 'syncBoxEnabled', 'configs', 'numRep', 'numOfCond', 'inblockRep', 'numBlocks', 'imageSequence', 'isi', 'imgDur', 'fixDur', 'blockDur', 'protocolConds', 'syncBoxHandle', 'foldersFrames_temp', 'counter', 'images', 'i', 'conditions', 'pathFrames_expressions', 'fileName_temp', 'imageData', 'screens', 'screenNumber', 'w', 'wRect', 'X', 'Y', 'FixCross', 'gotTrigger', 'logdata', 'startExperiment', 'numIt', 'startBlock', 'startTime', 'f', 'offset', 'imageIdx', 'imageToDisp', 'textureIndex', 'stopBlock', 'stopExperiment'])"
+       "dict_keys(['__header__', '__version__', '__globals__', 'ans', 'framesPath', 'subjectName', 'syncBoxEnabled', 'configs', 'numRep', 'numOfCond', 'inblockRep', 'numBlocks', 'imageSequence', 'isi', 'imgDur', 'fixDur', 'blockDur', 'protocolConds', 'syncBoxHandle', 'foldersFrames_temp', 'counter', 'images', 'i', 'conditions', 'pathFrames_expressions', 'fileName_temp', 'imageData', 'screens', 'screenNumber', 'w', 'wRect', 'X', 'Y', 'FixCross', 'gotTrigger', 'logdata', 'startExperiment', 'numIt', 'startBlock', 'startTime', 'f', 'offset', 'imageIdx', 'imageToDisp', 'textureIndex', 'stopBlock', 'stopExperiment'])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "array([[1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1]], dtype=uint8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 0, 9, 37, 19, 1, 12]\n",
+      "[0, 0, 0, 0, 0, 10, 19, 17, 20, 35]\n",
       "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27]\n"
      ]
     }
@@ -124,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
