--- a/MVPA-project-admin/prt2events_speech.ipynb
+++ b/MVPA-project-admin/prt2events_speech.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,28 +13,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "subj_map = {\n",
-    "   'AlexandreSayal': '0001',\n",
+    "   'AndreiaVerdade': '0001',\n",
+    "   'BrunoDireito': '0002',\n",
+    "   'CarlosFerreira': '0003',\n",
+    "   'CarolinaTravassos': '0004',\n",
+    "   'CatarinaDuarte': '0005',\n",
     "}\n",
     "\n",
     "task_map = {\n",
-    "   'run-inner_run1-data': 'TBD',\n",
+    "    'run-inner_run1-data': 'task-innerspeech_run-01',\n",
+    "    'run-inner_run2-data': 'task-innerspeech_run-02',\n",
+    "    'run-inner_run3-data': 'task-innerspeech_run-03',\n",
     "}\n",
     "\n",
     "#ROOT_DATA=\"/Users/home/Documents/data/\"\n",
-    "ROOT_DATA=\"/Volumes/LANGLYBACKU/DATA/DATA_Speech/\"\n",
+    "#ROOT_DATA=\"/Volumes/LANGLYBACKU/DATA/DATA_Speech/\"\n",
+    "ROOT_DATA=\"/media/brunomiguel/TOSHIBA EXT/DATA_Carlos_PhD_Final\"\n",
     "\n",
     "TR=2\n",
-    "CONDITIONS=['Baseline ', 'Vogals', 'Syllables', 'Words', 'Phrases']\n"
+    "CONDITIONS=['Baseline','Vogals','Syllables','Words','Phrases']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -42,18 +49,18 @@
      "output_type": "stream",
      "text": [
       "0001\n",
-      "TBD\n"
+      "task-innerspeech_run-02\n"
      ]
     }
    ],
    "source": [
-    "sname='AlexandreSayal'\n",
+    "sname='AndreiaVerdade'\n",
     "if sname in subj_map:\n",
     "    print(subj_map[sname])\n",
     "    sid=subj_map[sname]\n",
     "    \n",
     "    \n",
-    "tname='run-inner_run1-data'\n",
+    "tname='run-inner_run2-data'\n",
     "if tname in task_map:\n",
     "    print(task_map[tname])\n",
     "    tcode=task_map[tname]\n",
@@ -62,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Volumes/LANGLYBACKU/DATA/DATA_Speech/AlexandreSayal/run-inner_run1-data/PROJECT/ANALYSIS/Run1.prt\n"
+      "/media/brunomiguel/TOSHIBA EXT/DATA_Carlos_PhD_Final/AndreiaVerdade/run-inner_run2-data/PROJECT/ANALYSIS/Run2.prt\n"
      ]
     }
    ],
@@ -84,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Condition - Baseline , number of repetitions - 13\n",
+      "Condition - Baseline, number of repetitions - 13\n",
       "Condition - Vogals, number of repetitions - 3\n",
       "Condition - Syllables, number of repetitions - 3\n",
       "Condition - Words, number of repetitions - 3\n",
@@ -140,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -262,49 +269,49 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Vogals</td>\n",
-       "      <td>54</td>\n",
+       "      <td>96</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Vogals</td>\n",
-       "      <td>264</td>\n",
+       "      <td>222</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Vogals</td>\n",
-       "      <td>432</td>\n",
+       "      <td>348</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Syllables</td>\n",
-       "      <td>138</td>\n",
+       "      <td>54</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Syllables</td>\n",
-       "      <td>222</td>\n",
+       "      <td>180</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>Syllables</td>\n",
-       "      <td>348</td>\n",
+       "      <td>432</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Words</td>\n",
-       "      <td>96</td>\n",
+       "      <td>138</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>Words</td>\n",
-       "      <td>306</td>\n",
+       "      <td>264</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -322,7 +329,7 @@
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Phrases</td>\n",
-       "      <td>180</td>\n",
+       "      <td>306</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -337,34 +344,34 @@
       ],
       "text/plain": [
        "   trial_type  onset  duration\n",
-       "0   Baseline       0        12\n",
-       "1   Baseline      42        12\n",
-       "2   Baseline      84        12\n",
-       "3   Baseline     126        12\n",
-       "4   Baseline     168        12\n",
-       "5   Baseline     210        12\n",
-       "6   Baseline     252        12\n",
-       "7   Baseline     294        12\n",
-       "8   Baseline     336        12\n",
-       "9   Baseline     378        12\n",
-       "10  Baseline     420        12\n",
-       "11  Baseline     462        12\n",
-       "12  Baseline     504        12\n",
-       "13     Vogals     54        30\n",
-       "14     Vogals    264        30\n",
-       "15     Vogals    432        30\n",
-       "16  Syllables    138        30\n",
-       "17  Syllables    222        30\n",
-       "18  Syllables    348        30\n",
-       "19      Words     96        30\n",
-       "20      Words    306        30\n",
+       "0    Baseline      0        12\n",
+       "1    Baseline     42        12\n",
+       "2    Baseline     84        12\n",
+       "3    Baseline    126        12\n",
+       "4    Baseline    168        12\n",
+       "5    Baseline    210        12\n",
+       "6    Baseline    252        12\n",
+       "7    Baseline    294        12\n",
+       "8    Baseline    336        12\n",
+       "9    Baseline    378        12\n",
+       "10   Baseline    420        12\n",
+       "11   Baseline    462        12\n",
+       "12   Baseline    504        12\n",
+       "13     Vogals     96        30\n",
+       "14     Vogals    222        30\n",
+       "15     Vogals    348        30\n",
+       "16  Syllables     54        30\n",
+       "17  Syllables    180        30\n",
+       "18  Syllables    432        30\n",
+       "19      Words    138        30\n",
+       "20      Words    264        30\n",
        "21      Words    390        30\n",
        "22    Phrases     12        30\n",
-       "23    Phrases    180        30\n",
+       "23    Phrases    306        30\n",
        "24    Phrases    474        30"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +432,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Vogals</td>\n",
+       "      <td>Syllables</td>\n",
        "      <td>54</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -437,7 +444,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Words</td>\n",
+       "      <td>Vogals</td>\n",
        "      <td>96</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -449,7 +456,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Syllables</td>\n",
+       "      <td>Words</td>\n",
        "      <td>138</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -461,7 +468,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Phrases</td>\n",
+       "      <td>Syllables</td>\n",
        "      <td>180</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -473,7 +480,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Syllables</td>\n",
+       "      <td>Vogals</td>\n",
        "      <td>222</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -485,7 +492,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Vogals</td>\n",
+       "      <td>Words</td>\n",
        "      <td>264</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -497,7 +504,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>Words</td>\n",
+       "      <td>Phrases</td>\n",
        "      <td>306</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -509,7 +516,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>Syllables</td>\n",
+       "      <td>Vogals</td>\n",
        "      <td>348</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -533,7 +540,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>Vogals</td>\n",
+       "      <td>Syllables</td>\n",
        "      <td>432</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -561,34 +568,34 @@
       ],
       "text/plain": [
        "   trial_type  onset  duration\n",
-       "0   Baseline       0        12\n",
+       "0    Baseline      0        12\n",
        "1     Phrases     12        30\n",
-       "2   Baseline      42        12\n",
-       "3      Vogals     54        30\n",
-       "4   Baseline      84        12\n",
-       "5       Words     96        30\n",
-       "6   Baseline     126        12\n",
-       "7   Syllables    138        30\n",
-       "8   Baseline     168        12\n",
-       "9     Phrases    180        30\n",
-       "10  Baseline     210        12\n",
-       "11  Syllables    222        30\n",
-       "12  Baseline     252        12\n",
-       "13     Vogals    264        30\n",
-       "14  Baseline     294        12\n",
-       "15      Words    306        30\n",
-       "16  Baseline     336        12\n",
-       "17  Syllables    348        30\n",
-       "18  Baseline     378        12\n",
+       "2    Baseline     42        12\n",
+       "3   Syllables     54        30\n",
+       "4    Baseline     84        12\n",
+       "5      Vogals     96        30\n",
+       "6    Baseline    126        12\n",
+       "7       Words    138        30\n",
+       "8    Baseline    168        12\n",
+       "9   Syllables    180        30\n",
+       "10   Baseline    210        12\n",
+       "11     Vogals    222        30\n",
+       "12   Baseline    252        12\n",
+       "13      Words    264        30\n",
+       "14   Baseline    294        12\n",
+       "15    Phrases    306        30\n",
+       "16   Baseline    336        12\n",
+       "17     Vogals    348        30\n",
+       "18   Baseline    378        12\n",
        "19      Words    390        30\n",
-       "20  Baseline     420        12\n",
-       "21     Vogals    432        30\n",
-       "22  Baseline     462        12\n",
+       "20   Baseline    420        12\n",
+       "21  Syllables    432        30\n",
+       "22   Baseline    462        12\n",
        "23    Phrases    474        30\n",
-       "24  Baseline     504        12"
+       "24   Baseline    504        12"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,31 +608,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created the events file in sub-0001_ses-001_task-TBD_run-01_events.tsv \n"
+      "Created the events file in /home/brunomiguel/Documents/data/BIDS_vswp/sub-0001/ses-001/func/sub-0001_ses-001_task-innerspeech_run-02_events.tsv \n"
      ]
     }
    ],
    "source": [
-    "ROOT_BIDS=\"/Users/home/Documents/data/BIDS-vswp\"\n",
-    "ROOT_BIDS=\"\"\n",
+    "ROOT_BIDS=\"/home/brunomiguel/Documents/data/BIDS_vswp\"\n",
     "\n",
     "eventspath=os.path.join(ROOT_BIDS,'sub-'+sid, 'ses-001','func')\n",
-    "eventspath=''\n",
     "\n",
-    "eventsfn='sub-'+sid+'_ses-001_task-'+tcode+'_run-01_events.tsv'\n",
+    "eventsfn='sub-'+sid+'_ses-001_'+tcode+'_events.tsv'\n",
     "\n",
     "eventspathfn=os.path.join(eventspath, eventsfn)\n",
     "\n",
     "events.to_csv(eventspathfn, sep='\\t', index=False)\n",
     "print(\"Created the events file in %s \" % eventspathfn)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -644,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
